--- a/7ds_challenge/make_eazy_feeds.ipynb
+++ b/7ds_challenge/make_eazy_feeds.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4013.565472569176"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "       431, 432, 433, 434, 435, 436, 437])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "       432, 433, 434, 435, 436, 437, 438])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=166041</i>\n",
-       "<table id=\"table140473401048080\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140220347907424\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ID</th><th>HSC_i_MAG</th><th>z_spec</th><th>FLAG_ML</th><th>ra</th><th>dec</th><th>E_B-V_</th><th>Classic</th><th>EZzphot</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int32</th><th>float64</th></tr></thead>\n",
        "<tr><td>12</td><td>23.990103981421147</td><td>0.707</td><td>0.0</td><td>150.47679031</td><td>2.33150699</td><td>0.014723000000000002</td><td>962809</td><td>0.6809810000000001</td></tr>\n",
@@ -288,6 +288,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NaN,4.487230817431134,NaN,-9.723785814977731,-1.874691139036223,4.848198529302474,-3.7763108337716504,-0.9274747161567981,-5.343238944895065,11.623775987897789,10.40834057909626,-5.517982829220833,1.6231575539313263,-6.418530512750463,7.619683715708758,8.97711766883915,15.559303641755454,7.486338875154642,78.85481806615323,-37.6191915238877'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datatab[\"fiducial_flux_RIS\"][336][1:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([         nan,   4.48723082,          nan,  -9.72378581,\n",
+       "        -1.87469114,   4.84819853,  -3.77631083,  -0.92747472,\n",
+       "        -5.34323894,  11.62377599,  10.40834058,  -5.51798283,\n",
+       "         1.62315755,  -6.41853051,   7.61968372,   8.97711767,\n",
+       "        15.55930364,   7.48633888,  78.85481807, -37.61919152])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.fromstring(datatab[\"fiducial_flux_RIS\"][336][1:-1], dtype=np.float64, sep=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -325,14 +369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=166041</i>\n",
-       "<table id=\"table140474147420816\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140224443956048\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ID</th><th>HSC_i_MAG</th><th>z_spec</th><th>FLAG_ML</th><th>ra</th><th>dec</th><th>E_B-V_</th><th>Classic</th><th>EZzphot</th><th>F419</th><th>F420</th><th>F421</th><th>F422</th><th>F423</th><th>F424</th><th>F425</th><th>F426</th><th>F427</th><th>F428</th><th>F429</th><th>F430</th><th>F431</th><th>F432</th><th>F433</th><th>F434</th><th>F435</th><th>F436</th><th>F437</th><th>F438</th><th>E419</th><th>E420</th><th>E421</th><th>E422</th><th>E423</th><th>E424</th><th>E425</th><th>E426</th><th>E427</th><th>E428</th><th>E429</th><th>E430</th><th>E431</th><th>E432</th><th>E433</th><th>E434</th><th>E435</th><th>E436</th><th>E437</th><th>E438</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>12</td><td>23.990103981421147</td><td>0.707</td><td>0.0</td><td>150.47679031</td><td>2.33150699</td><td>0.014723000000000002</td><td>962809</td><td>0.6809810000000001</td><td>0.40049770149460284</td><td>0.5078999488291236</td><td>0.2963054331463698</td><td>0.3335773725294298</td><td>0.09632781075085359</td><td>0.21192752586334654</td><td>0.37209524197826066</td><td>0.29368319984589747</td><td>0.4985870900193809</td><td>0.4046981079202723</td><td>0.3725967722012696</td><td>0.6751451221323529</td><td>0.7335593340776831</td><td>1.0759871857767476</td><td>0.6807956725650958</td><td>1.184172133594535</td><td>0.9488228953306005</td><td>0.5163122176461388</td><td>1.267783441864066</td><td>1.0484799666863904</td><td>0.12772560052432094</td><td>0.11387962045581174</td><td>0.10839052197376808</td><td>0.10817636615811946</td><td>0.10437727725409991</td><td>0.1112288824337841</td><td>0.13267015359507206</td><td>0.13184519400400985</td><td>0.1461283265740689</td><td>0.17801847567707968</td><td>0.16864207043732382</td><td>0.1791378725006872</td><td>0.2072308907717925</td><td>0.2797763431091668</td><td>0.3134661478735132</td><td>0.4545645852922471</td><td>0.5045852615320934</td><td>0.5662332409277782</td><td>0.7237828478570381</td><td>1.0045318576971731</td></tr>\n",
@@ -386,13 +430,109 @@
        "601307 23.419138966614625  0.9887 ... 0.7239526787501562 1.0048642197988775"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "inputtab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   336,    485,    552,    698,    835,   1498,   1657,   1678,\n",
+       "         2136,   2686,   3154,   3583,   3834,   4047,   4512,   5159,\n",
+       "         5492,   5625,   5895,   6351,   6432,   6591,   7134,   7342,\n",
+       "         7796,   8307,   8444,   8554,   8571,  10142,  10212,  10399,\n",
+       "        10418,  10469,  10673,  10771,  10895,  11779,  11893,  12880,\n",
+       "        13195,  13205,  13465,  13518,  14030,  14265,  14381,  14606,\n",
+       "        15106,  16144,  16162,  16579,  16629,  16779,  16975,  17038,\n",
+       "        17066,  17163,  17378,  17451,  17524,  17909,  18315,  19215,\n",
+       "        19596,  20031,  20566,  20680,  20737,  20940,  20979,  21049,\n",
+       "        21173,  21477,  21570,  22064,  22594,  22887,  23029,  23082,\n",
+       "        23347,  24754,  25249,  25371,  25532,  25901,  26059,  26587,\n",
+       "        26666,  26849,  26870,  27693,  27847,  28247,  29106,  29281,\n",
+       "        29303,  29664,  29746,  29857,  29924,  30180,  30730,  30849,\n",
+       "        30905,  31113,  31327,  31438,  32363,  32433,  32665,  33199,\n",
+       "        33201,  33733,  33968,  34341,  35367,  35417,  36475,  36618,\n",
+       "        37056,  37161,  37311,  37424,  37516,  37555,  38088,  38997,\n",
+       "        39228,  39303,  39915,  40718,  41071,  41258,  41736,  41797,\n",
+       "        42103,  42375,  42467,  42630,  42663,  42692,  42709,  42738,\n",
+       "        43049,  43063,  43079,  43100,  43158,  43314,  43584,  43759,\n",
+       "        43976,  44273,  44461,  44495,  44640,  45343,  45349,  45683,\n",
+       "        46247,  46267,  46308,  46311,  46765,  47137,  47182,  47964,\n",
+       "        48673,  49011,  49242,  49576,  49580,  49696,  50051,  50803,\n",
+       "        51053,  51173,  51225,  51334,  52120,  52174,  52223,  53900,\n",
+       "        54420,  54767,  54864,  54991,  55160,  55202,  55551,  55788,\n",
+       "        56143,  56147,  56402,  56716,  57378,  57424,  58302,  58599,\n",
+       "        58759,  58981,  58988,  59141,  59795,  59980,  60016,  60449,\n",
+       "        60460,  60788,  60795,  60822,  60828,  61406,  61436,  61690,\n",
+       "        61905,  61906,  61964,  62170,  62598,  62759,  62853,  63225,\n",
+       "        63291,  63338,  63770,  63827,  63912,  64204,  64209,  64379,\n",
+       "        64415,  64421,  65526,  65665,  65834,  66006,  66235,  66548,\n",
+       "        67074,  67370,  67399,  67515,  67769,  67792,  67896,  67984,\n",
+       "        68121,  68323,  68599,  68657,  69109,  69394,  69885,  69994,\n",
+       "        70003,  70146,  70807,  71021,  71135,  71729,  71758,  71763,\n",
+       "        71898,  72433,  72671,  72734,  73060,  73173,  73445,  73569,\n",
+       "        73998,  74036,  74345,  74518,  74557,  74736,  74881,  74906,\n",
+       "        74936,  75103,  75222,  75276,  75283,  75329,  75613,  75679,\n",
+       "        76099,  76117,  76411,  76452,  76656,  76835,  78413,  79062,\n",
+       "        79240,  79360,  79478,  79533,  79692,  80014,  80044,  80099,\n",
+       "        80178,  80246,  80519,  80692,  80984,  81307,  81355,  81635,\n",
+       "        81646,  81743,  81836,  81860,  82531,  82638,  82696,  82754,\n",
+       "        83102,  83156,  83558,  83616,  84810,  85242,  85795,  85902,\n",
+       "        86123,  87103,  87109,  87164,  87389,  87624,  87673,  87849,\n",
+       "        87857,  88339,  88443,  88520,  88626,  88755,  88810,  89393,\n",
+       "        89902,  90141,  90188,  90255,  90957,  91073,  91114,  91504,\n",
+       "        92033,  92261,  92291,  93238,  93673,  93917,  94097,  94904,\n",
+       "        94985,  95708,  95745,  95884,  96298,  96469,  96594,  97612,\n",
+       "        97693,  98283,  98433,  98886,  98902,  99644,  99754,  99816,\n",
+       "       100464, 100567, 101018, 101870, 102306, 102342, 102481, 102545,\n",
+       "       103890, 104133, 104309, 104397, 104891, 105252, 105321, 105794,\n",
+       "       105984, 106437, 106912, 106997, 107106, 108832, 108929, 109847,\n",
+       "       109912, 109978, 110871, 111597, 111938, 111997, 112005, 112054,\n",
+       "       112200, 112451, 112463, 112994, 113321, 113408, 113925, 114013,\n",
+       "       115310, 115405, 115517, 115681, 115808, 115999, 116191, 116245,\n",
+       "       116324, 116773, 117691, 118022, 118240, 118313, 118490, 118616,\n",
+       "       118714, 119278, 119633, 120203, 120206, 120332, 120396, 120425,\n",
+       "       121099, 121451, 121477, 121728, 121888, 122135, 123569, 123768,\n",
+       "       124044, 124462, 124492, 124683, 124984, 125114, 125130, 125512,\n",
+       "       125869, 126047, 126491, 126502, 126678, 127146, 127163, 127363,\n",
+       "       127418, 128143, 128724, 129039, 129052, 129196, 129549, 129635,\n",
+       "       129862, 129921, 130971, 131105, 131163, 131362, 131405, 131806,\n",
+       "       131821, 132581, 132889, 133515, 133991, 134021, 134251, 134271,\n",
+       "       134278, 134314, 134631, 134701, 134823, 134932, 134956, 135001,\n",
+       "       136021, 137033, 137091, 138239, 138863, 139079, 139564, 139577,\n",
+       "       140018, 140046, 140606, 141340, 141522, 141784, 141977, 142230,\n",
+       "       142702, 142704, 142860, 143117, 143204, 143620, 143625, 143758,\n",
+       "       143919, 143955, 144252, 144253, 144426, 144429, 144533, 144537,\n",
+       "       144559, 145227, 145297, 145485, 145663, 145808, 145879, 147099,\n",
+       "       147135, 147288, 147646, 148033, 148328, 148591, 148864, 149262,\n",
+       "       150470, 150517, 150702, 150816, 150826, 151099, 151330, 151679,\n",
+       "       151707, 151721, 151883, 153031, 153192, 153419, 153609, 153911,\n",
+       "       153969, 153979, 154008, 154028, 154032, 154205, 154209, 154220,\n",
+       "       154486, 154959, 155185, 155218, 155450, 155952, 156114, 156406,\n",
+       "       156831, 157224, 157529, 157606, 158169, 158288, 158328, 158501,\n",
+       "       158574, 158614, 158634, 158832, 158968, 158990, 159736, 159995,\n",
+       "       160024, 160839, 161044, 161525, 161537, 161539, 161863, 162202,\n",
+       "       162215, 163069, 163963, 164020, 164582, 164781, 164823, 164966,\n",
+       "       164978, 165356, 165613, 165973, 166019])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(len(inputtab[\"F419\"]))[np.isnan(inputtab[\"F419\"].data)]"
    ]
   },
   {
@@ -524,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.-1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
