make filtres file for eazypy

--- a/joint_challenge/make_eazy_filtres.ipynb
+++ b/joint_challenge/make_eazy_filtres.ipynb
@@ -2,35 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/4000_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/4250_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/4500_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/4750_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/5000_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/5250_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/5500_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/5750_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/6000_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/6250_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/6500_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/6750_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/7000_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/7250_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/7500_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/7750_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/8000_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/8250_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/8500_fitted.csv'),\n",
-       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/7DT_filters_v2/8750_fitted.csv')]"
+       "[PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/4000_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/4250_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/4500_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/4750_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/5000_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/5250_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/5500_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/5750_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/6000_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/6250_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/6500_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/6750_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/7000_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/7250_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/7500_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/7750_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/8000_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/8250_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/8500_fitted.csv'),\n",
+       " PosixPath('/data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/7DT_filters_v2/8750_fitted.csv')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,51 +44,11 @@
     "\n",
     "\n",
     "WD = Path.cwd()\n",
-    "FILTERDIR = WD / \"7DT_filters_v2\"\n",
-    "filtpaths = list(FILTERDIR.glob(\"*.csv\"))\n",
+    "FILTERDIR_7DT = WD / \"data\" / \"filters\" / \"7DT_filters_v2\"\n",
+    "FILTERDIR_SPHEREX= WD / \"data\" / \"filters\" / \"fiducial_filters_102\"\n",
+    "filtpaths = list(FILTERDIR_7DT.glob(\"*.csv\"))\n",
     "filtpaths.sort()\n",
     "filtpaths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote </data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/FILTER.RES+7DT.res[.info]>\n"
-     ]
-    }
-   ],
-   "source": [
-    "path_default_filter = Path(path_to_eazy_data()) / \"FILTER.RES.latest\"\n",
-    "\n",
-    "path_output_filter = WD / \"FILTER.RES+7DT.res\"\n",
-    "\n",
-    "latest_filters = filters.FilterFile(path_default_filter)\n",
-    "tempfile = Path(\"tempfile\")\n",
-    "with open(tempfile, \"w\") as f:\n",
-    "    for filtpath in filtpaths:\n",
-    "        filt = Table.read(\n",
-    "            filtpath, format=\"ascii.csv\", names=[\"id\", \"wave\", \"throughput\"]\n",
-    "        )\n",
-    "        res = filters.FilterDefinition(\n",
-    "            wave=filt[\"wave\"] * 10, # Convert to Angstrom from nm\n",
-    "            throughput=filt[\"throughput\"],\n",
-    "            name=f\"7DT_{filtpath.stem}\",\n",
-    "        )\n",
-    "        f.write(res.for_filter_file() + \"\\n\")\n",
-    "\n",
-    "temp_filters = filters.FilterFile(\"tempfile\")\n",
-    "tempfile.unlink()\n",
-    "\n",
-    "for filt in temp_filters.filters:\n",
-    "    latest_filters.filters.append(filt)\n",
-    "\n",
-    "latest_filters.write(path_output_filter.as_posix())"
    ]
   },
   {
@@ -156,29 +116,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "def make_eazy_filters_spherex(filtdir, Nchan=17, Ndet=6, epsilon_rdp=1e-5,\n",
+    "                              path_default_filter=os.path.join(path_to_eazy_data(), 'FILTER.RES.latest')):\n",
+    "    \n",
+    "    latest_filters = filters.FilterFile(path_default_filter)\n",
+    "    tempfile = Path('tempfile')\n",
+    "    with open(tempfile, 'w') as f:\n",
+    "        for j in range(Ndet):\n",
+    "            for i in range(Nchan):\n",
+    "                filt = Table.read(filtdir/f'filt_det{j+1}_{i+1}.csv',\n",
+    "                                  format='ascii.no_header',\n",
+    "                                  names=['wave', 'throughput'])\n",
+    "                res = filters.FilterDefinition(wave=filt['wave'],\n",
+    "                                               throughput=filt['throughput'],\n",
+    "                                               name=f'SPHEREx_Band{j+1}_{i+1}')\n",
+    "                wred, tred = reduce_filter(res, epsilon_rdp)\n",
+    "                \n",
+    "                res = filters.FilterDefinition(wave=wred, throughput=tred,\n",
+    "                                               name=f'SPHEREx_Band{j+1}_{i+1}')\n",
+    "                f.write(res.for_filter_file() + '\\n')\n",
+    "\n",
+    "    temp_filters = filters.FilterFile('tempfile')\n",
+    "    tempfile.unlink()\n",
+    "    \n",
+    "    for filt in temp_filters.filters:\n",
+    "        latest_filters.filters.append(filt)\n",
+    "        \n",
+    "    return latest_filters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote </data1/hbahk/spherex-photoz/spherex-challenge/7ds_challenge/FILTER.RES+7DTreduced.res[.info]>\n"
+      "Wrote </data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/FILTER.RES+SPHEREx+7DT_reduced.res[.info]>\n"
      ]
     }
    ],
    "source": [
-    "path_output_filter = WD / \"FILTER.RES+7DTreduced.res\"\n",
+    "path_default_filter = Path(path_to_eazy_data()) / \"FILTER.RES.latest\"\n",
+    "\n",
+    "path_output_filter = WD / \"FILTER.RES+SPHEREx+7DT_reduced.res\"\n",
     "epsilon_rdp = 1e-5\n",
     "\n",
-    "latest_filters = filters.FilterFile(path_default_filter)\n",
+    "# latest_filters = filters.FilterFile(path_default_filter)\n",
+    "latest_filters = make_eazy_filters_spherex(FILTERDIR_SPHEREX,\n",
+    "                                           Nchan=17, Ndet=6, epsilon_rdp=epsilon_rdp,\n",
+    "                                           path_default_filter=path_default_filter)\n",
     "tempfile = Path(\"tempfile\")\n",
     "with open(tempfile, \"w\") as f:\n",
     "    for filtpath in filtpaths:\n",
