move filtres file

--- a/joint_challenge/make_eazy_filtres.ipynb
+++ b/joint_challenge/make_eazy_filtres.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,21 +152,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote </data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/FILTER.RES+SPHEREx+7DT_reduced.res[.info]>\n"
+      "Wrote </data1/hbahk/spherex-photoz/spherex-challenge/joint_challenge/data/filters/FILTER.RES+SPHEREx+7DT_reduced.res[.info]>\n"
      ]
     }
    ],
    "source": [
     "path_default_filter = Path(path_to_eazy_data()) / \"FILTER.RES.latest\"\n",
     "\n",
-    "path_output_filter = WD / \"FILTER.RES+SPHEREx+7DT_reduced.res\"\n",
+    "path_output_filter = WD / \"data\" / \"filters\" / \"FILTER.RES+SPHEREx+7DT_reduced.res\"\n",
     "epsilon_rdp = 1e-5\n",
     "\n",
     "# latest_filters = filters.FilterFile(path_default_filter)\n",
