--- a/joint_challenge/make_eazy_feeds.ipynb
+++ b/joint_challenge/make_eazy_feeds.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,7 @@
     "\n",
     "temppaths_brown = list(TEMPDIR.glob(\"*.dat\"))\n",
     "temppaths_cosmos = list(TEMPDIR.glob(\"*.sed\"))\n",
-    "temppaths = temppaths_brown + temppaths_cosmos\n",
-    "\n",
-    "Avs = [0.25, 0.5, 1.0]"
+    "temppaths = temppaths_brown + temppaths_cosmos"
    ]
   },
   {
@@ -765,6 +763,84 @@
     "cosmos_7ds_ims_spherex_deep = join(cosmos_spherex_deep, cosmos_7ds_ims, keys=\"ID\")\n",
     "\n",
     "cosmos_7ds_ims_spherex_deep.write(INPUTDIR / \"COSMOS_input_7DS_IMS_SPHEREx_deep.fits\", overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the minimum and maximum z values for each catalog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gama_cosmos_7ds_wfs_spherex = Table.read(INPUTDIR / \"GAMA_COSMOS_input_7DS_WFS_SPHEREx.fits\")\n",
+    "cosmos_7ds_ims_spherex_deep = Table.read(INPUTDIR / \"COSMOS_input_7DS_IMS_SPHEREx_deep.fits\")\n",
+    "gama_cosmos_spherex = Table.read(INPUTDIR / \"GAMA_COSMOS_input_SPHEREx.fits\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0022\n",
+      "5.7104\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = gama_cosmos_7ds_wfs_spherex[\"z_spec\"]\n",
+    "print(gama_cosmos_7ds_wfs_spherex[z>0][\"z_spec\"].min())\n",
+    "print(gama_cosmos_7ds_wfs_spherex[z>0][\"z_spec\"].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0188\n",
+      "4.3845\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = cosmos_7ds_ims_spherex_deep[\"z_spec\"]\n",
+    "print(cosmos_7ds_ims_spherex_deep[z>0][\"z_spec\"].min())\n",
+    "print(cosmos_7ds_ims_spherex_deep[z>0][\"z_spec\"].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0022\n",
+      "5.7104\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = gama_cosmos_spherex[\"z_spec\"]\n",
+    "print(gama_cosmos_spherex[z>0][\"z_spec\"].min())\n",
+    "print(gama_cosmos_spherex[z>0][\"z_spec\"].max())"
    ]
   }
  ],
